@@ -38,7 +38,10 @@ ROOM 2
      18 12  18 20
    DOOR 32 12 31 12 STATUS OPEN LEADS TO 7
    DOOR 18 15 18 16 STATUS OPEN LEADS TO 1
+   MONSTER python_doommarine_mp AT 24 18
+   MONSTER python_doommarine_mp AT 30 18
    MONSTER python_doommarine_mp AT 24 15
+   MONSTER python_doommarine_mp AT 30 15
    LIGHT AT 22 19 ON MID
    LIGHT AT 26 19 ON MID
    LIGHT AT 30 19 ON MID
@@ -88,6 +91,7 @@ ROOM 4
      8 7  8 12
    DOOR 15 10 15 9 STATUS OPEN LEADS TO 5
    DOOR 8 9 8 10 STATUS OPEN LEADS TO 3
+   MONSTER python_doommarine_mp AT 13 10
    LIGHT AT 12 11 ON MID
    LIGHT AT 14 11 ON FLOOR
    LIGHT AT 14 10 ON FLOOR
@@ -130,7 +134,7 @@ ROOM 6
      21 7  21 12
    DOOR 27 10 27 9 STATUS OPEN LEADS TO 7
    DOOR 21 9 21 10 STATUS OPEN LEADS TO 5
-   MONSTER python_doommarine_mp AT 25 9
+   MONSTER python_doommarine_mp AT 25 10
    LIGHT AT 25 11 ON MID
    LIGHT AT 26 11 ON FLOOR
    LIGHT AT 26 10 ON FLOOR
